--- a/client/src/styles/Sequencer.css
+++ b/client/src/styles/Sequencer.css
@@ -4,12 +4,14 @@
 }
 
 .piano-roll {
+	margin-top: 1rem;
+	margin-right: 2rem;
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
 	overflow-x: scroll;
 	overflow-y: scroll;
-	height: 80vh;
+	height: 83vh
 }
 
 ::-webkit-scrollbar {
